--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "react-scripts": "1.1.5",
     "react-sortable-hoc": "^1.11.0",
     "reqwest": "^2.0.5",
-    "stripe": "^8.137.0"
+    "stripe": "^8.137.0",
+    "@ant-design/icons": "^4.2.2",
+    "babel-plugin-import": "^1.13.0",
+    "react-app-rewire-less": "^2.1.3",
+    "react-app-rewired": "^1.6.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -31,10 +35,7 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "@ant-design/icons": "^4.2.2",
-    "babel-plugin-import": "^1.13.0",
-    "react-app-rewire-less": "^2.1.3",
-    "react-app-rewired": "^1.6.2"
+  "engines": {
+    "node": "14.x"
   }
 }
