--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "react-app-rewired": "^1.6.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "react-app-rewired --max_old_space_size=4096 start",
+    "build": "react-app-rewired --max_old_space_size=4096 build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
