--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@stripe/react-stripe-js": "^1.2.2",
     "@stripe/stripe-js": "^1.12.1",
     "antd": "^4.7.0",
     "array-move": "^3.0.1",
     "axios": "^0.20.0",
+    "babel-plugin-import": "^1.13.0",
     "compress.js": "^1.1.2",
     "react": "^16.13.1",
+    "react-app-rewire-less": "^2.1.3",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
+    "react-new-window": "^0.1.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-sortable-hoc": "^1.11.0",
     "reqwest": "^2.0.5",
-    "stripe": "^8.137.0",
-    "@ant-design/icons": "^4.2.2",
-    "babel-plugin-import": "^1.13.0",
-    "react-app-rewire-less": "^2.1.3",
-    "react-app-rewired": "^1.6.2"
+    "stripe": "^8.137.0"
   },
   "scripts": {
     "start": "react-app-rewired --max_old_space_size=4096 start",
