--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
   },
   "devDependencies": {
     "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/embed": "^2.4.6",
     "@editorjs/header": "^2.6.1",
     "@editorjs/image": "^2.6.0",
     "@editorjs/link": "^2.3.1",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/marker": "^1.2.2",
     "@editorjs/paragraph": "^2.8.0",
     "react-editor-js": "^1.10.0"
   }
