--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-highlight-words": "^0.16.0",
     "react-new-window": "^0.1.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.0.3",
     "react-sortable-hoc": "^1.11.0",
     "reqwest": "^2.0.5",
     "stripe": "^8.137.0"
@@ -42,5 +42,11 @@
     "@editorjs/marker": "^1.2.2",
     "@editorjs/paragraph": "^2.8.0",
     "react-editor-js": "^1.10.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
